--- a/01Interpolacion.ipynb
+++ b/01Interpolacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcDggLiLmaWa10wDy/PTNG",
+      "authorship_tag": "ABX9TyNLCsx7ixJu1aI+8G1U334C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -214,7 +214,7 @@
         "\n",
         "Usemos la función\n",
         "$$\n",
-        "f(x)=e^{-(5x)^2}\n",
+        "f(x)=e^{-(5x)^2}+x\n",
         "$$\n",
         "\n",
         "en el intervalo $x\\in[-1,1]$"
@@ -249,14 +249,14 @@
     {
       "cell_type": "code",
       "source": [
-        "pol= #<---- polinomio de lagrange\n",
-        "xs = #<--- definir el vector\n",
-        "ypol= #<---- interpolacion"
+        "pol=lagrange(x,y) #<---- polinomio de lagrange\n",
+        "xs =np.linspace(x.min(),x.max(),100) #<--- definir el vector\n",
+        "ypol= pol(xs)#<---- interpolacion"
       ],
       "metadata": {
         "id": "UvZeuKHyq--O"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -283,22 +283,22 @@
         "id": "zWiPhbHRW6lA"
       },
       "source": [
-        "sc=interpolate.interp1d(x,y,kind='') #<---- polinomio de interpolacion cubica\n",
+        "sc=interpolate.interp1d(x,y,kind='cubic') #<---- polinomio de interpolacion cubica\n",
         "\n",
-        "ysc= #<---- interpolacion"
+        "ysc=sc(xs) #<---- interpolacion"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "plt.plot(x,y,'o',xs,ypol,'--') #<--- agregar spline cubico\n",
+        "plt.plot(x,y,'o',xs,ypol,'--',xs,ysc,'-') #<--- agregar spline cubico\n",
         "plt.grid()\n",
         "plt.legend(['Data','Lagrange','Spline cubic'])\n",
         "plt.xlabel('x')\n",
         "plt.ylabel('y')\n",
-        "plt.ylim([-1,1])\n",
+        "plt.ylim([-2,2])\n",
         "plt.title('Runge phenomenon')\n",
         "plt.show()"
       ],
