--- a/01Interpolacion.ipynb
+++ b/01Interpolacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLCsx7ixJu1aI+8G1U334C",
+      "authorship_tag": "ABX9TyM8TYz9fC/Edfv+QbPw4tMn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -243,20 +243,20 @@
         "x=np.linspace(-1,1,15)\n",
         "y=np.exp(-(5*x)**2) + x #1/(1+25*x**2)"
       ],
-      "execution_count": 2,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "pol=lagrange(x,y) #<---- polinomio de lagrange\n",
-        "xs =np.linspace(x.min(),x.max(),100) #<--- definir el vector\n",
-        "ypol= pol(xs)#<---- interpolacion"
+        "pol=lagrange() #<---- polinomio de lagrange\n",
+        "xs =np.linspace() #<--- definir el vector\n",
+        "ypol= #<---- interpolacion"
       ],
       "metadata": {
         "id": "UvZeuKHyq--O"
       },
-      "execution_count": 3,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -285,15 +285,15 @@
       "source": [
         "sc=interpolate.interp1d(x,y,kind='cubic') #<---- polinomio de interpolacion cubica\n",
         "\n",
-        "ysc=sc(xs) #<---- interpolacion"
+        "ysc= #<---- interpolacion"
       ],
-      "execution_count": 8,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "plt.plot(x,y,'o',xs,ypol,'--',xs,ysc,'-') #<--- agregar spline cubico\n",
+        "plt.plot(x,y,'o',xs,ypol,'--') #<--- agregar spline cubico\n",
         "plt.grid()\n",
         "plt.legend(['Data','Lagrange','Spline cubic'])\n",
         "plt.xlabel('x')\n",
