--- a/02ENL.ipynb
+++ b/02ENL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_cerrados.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQ4ggFA+a74voOysu6gzi4",
+      "authorship_tag": "ABX9TyOMmkzLhvsqz/hnmJrls5BU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,13 +103,62 @@
     {
       "cell_type": "code",
       "source": [
-        "f = #<--- definir la funcion a resolver\n",
+        "f = #<--- definir la funcion a resolver"
+      ],
+      "metadata": {
+        "id": "2E7syQOuSUxE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import plotly.express as xp\n",
+        "xs=np.linspace(-10,10)\n",
+        "\n",
+        "fig = xp.line(x=,y=,\n",
+        "              markers='line+markers',\n",
+        "              labels={'x':'Eje x','y':'Eje y'},\n",
+        "              title='Mi grafica') #<--- completar los parametros a graficar\n",
+        "fig.show()"
+      ],
+      "metadata": {
+        "id": "F_vAICbW104R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "r,t= #<--- hacer la llamada a la funcion biseccion\n",
         "print(r)\n",
         "t"
       ],
       "metadata": {
-        "id": "2E7syQOuSUxE"
+        "id": "FNDUpCCI3RGf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import plotly.express as xp\n",
+        "xs=np.linspace(-10,10)\n",
+        "\n",
+        "fig = xp.line(x=,y=,\n",
+        "              markers='line+markers',\n",
+        "              labels={'x':'Eje x','y':'Eje y'},\n",
+        "              title='Mi grafica') #<--- completar los parametros a graficar\n",
+        "\n",
+        "fig.add_annotation(x=,y=,text='Raiz '+str(r),arrowhead=1,arrowsize=2)\n",
+        "\n",
+        "fig.show()"
+      ],
+      "metadata": {
+        "id": "k8Y6own93Usr"
       },
       "execution_count": null,
       "outputs": []
