--- a/02ENL.ipynb
+++ b/02ENL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_cerrados.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOMmkzLhvsqz/hnmJrls5BU",
+      "authorship_tag": "ABX9TyP0JGY3ttrUEYBo7XH005gc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,7 +152,7 @@
         "              markers='line+markers',\n",
         "              labels={'x':'Eje x','y':'Eje y'},\n",
         "              title='Mi grafica') #<--- completar los parametros a graficar\n",
-        "\n",
+        "fig.add_scatter(x=[],y=[],mode='lines+markers',name=\"Raiz\")\n",
         "fig.add_annotation(x=,y=,text='Raiz '+str(r),arrowhead=1,arrowsize=2)\n",
         "\n",
         "fig.show()"
