--- a/Mandelbrot.ipynb
+++ b/Mandelbrot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwV4BeGrcUwXgWRu4AxNoi",
+      "authorship_tag": "ABX9TyN4ndTmiVdaP/xE31e9BJsW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,10 +74,19 @@
     {
       "cell_type": "code",
       "source": [
-        "c= #<--- valor seleccionado. Punto 1\n",
-        "z= #<--- valor inicial. Punto 2\n",
+        "c=-0.5+0.5j #<--- valor seleccionado. Punto 1\n",
+        "z=0 #<--- valor inicial. Punto 2\n",
         "\n",
         "#iteraciones. Punto 3\n",
+        "z=z**2+c;print(z)\n",
+        "z=z**2+c;print(z)\n",
+        "z=z**2+c;print(z)\n",
+        "z=z**2+c;print(z)\n",
+        "z=z**2+c;print(z)\n",
+        "z=z**2+c;print(z)\n",
+        "z=z**2+c;print(z)\n",
+        "z=z**2+c;print(z)\n",
+        "z=z**2+c;print(z)\n",
         "z=z**2+c;print(z)\n",
         "z=z**2+c;print(z)\n",
         "z=z**2+c;print(z)\n",
@@ -115,8 +124,8 @@
     {
       "cell_type": "code",
       "source": [
-        "c= #<--- valor seleccionado. Punto 1\n",
-        "z= #<--- valor inicial. Punto 2\n",
+        "c=2+0j #<--- valor seleccionado. Punto 1\n",
+        "z=0 #<--- valor inicial. Punto 2\n",
         "\n",
         "#iteraciones. Punto 3\n",
         "z=z**2+c;print(z)\n",
@@ -195,7 +204,7 @@
       "metadata": {
         "id": "3dHNoxnq41Jo"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -304,12 +313,13 @@
         "        pixels[x, y] = color\n",
         "\n",
         "# Mostrar la imagen del conjunto de Julia\n",
-        "image.show()\n"
+        "image.show()\n",
+        "image.save('julia.png')"
       ],
       "metadata": {
         "id": "vOu6vFXVt2Tf"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     }
   ]
