--- a/Mandelbrot.ipynb
+++ b/Mandelbrot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4ndTmiVdaP/xE31e9BJsW",
+      "authorship_tag": "ABX9TyMsVJxEAEUr/KNPJkwTX4WD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,8 +74,8 @@
     {
       "cell_type": "code",
       "source": [
-        "c=-0.5+0.5j #<--- valor seleccionado. Punto 1\n",
-        "z=0 #<--- valor inicial. Punto 2\n",
+        "c= #<--- valor seleccionado. Punto 1\n",
+        "z= #<--- valor inicial. Punto 2\n",
         "\n",
         "#iteraciones. Punto 3\n",
         "z=z**2+c;print(z)\n",
@@ -124,8 +124,8 @@
     {
       "cell_type": "code",
       "source": [
-        "c=2+0j #<--- valor seleccionado. Punto 1\n",
-        "z=0 #<--- valor inicial. Punto 2\n",
+        "c= #<--- valor seleccionado. Punto 1\n",
+        "z= #<--- valor inicial. Punto 2\n",
         "\n",
         "#iteraciones. Punto 3\n",
         "z=z**2+c;print(z)\n",
