--- a/fractal_newton.ipynb
+++ b/fractal_newton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzqX4X+Fb5Vp2ZbkG3AzUs",
+      "authorship_tag": "ABX9TyPO2p/Ihy8oZoxcekEcFV6s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 46,
       "metadata": {
         "id": "wTEZSlTOgaYg"
       },
@@ -58,9 +58,9 @@
       "source": [
         "def nr(f,df,x0,maxit=100,tol=1e-6):\n",
         "  k=0 #valor inicial de iteraciones\n",
-        "  x=x0 \n",
+        "  x=x0\n",
         "  while k<maxit:#mientras las iteraciones sean menor a la maxima\n",
-        "    x = x - f(x)/df(x) #aplica el metodo de Newton\n",
+        "    x = x - f(x)/df(x) if abs(df(x))>=tol else x+tol #aplica el metodo de Newton\n",
         "    k = k + 1 #incrementa la iteracion\n",
         "    if abs(f(x))<tol: #verifica el criterio de convergencia\n",
         "        return x, #<---------- retorna la raiz y las iteraciones\n",
@@ -84,7 +84,7 @@
         "f'(x)=2x\n",
         "$$\n",
         "\n",
-        "Podemos dar un valor inicial por ejemplo $x_0=1$, un valor máximo de iteraciones $= 100$ y una tolerancia $= 1e-5$. \n",
+        "Podemos dar un valor inicial por ejemplo $x_0=1$, un valor máximo de iteraciones $= 100$ y una tolerancia $= 1e-5$.\n",
         "\n",
         "Ejecutamos el programa de Newton-Raphson para encontrar la raíz"
       ],
@@ -95,11 +95,11 @@
     {
       "cell_type": "code",
       "source": [
-        "f  = lambda x: #<---- defina la funcion\n",
-        "df = lambda x: #<---- defina su derivada\n",
-        "x0       = #valor inicial\n",
-        "niter    = #numero maximo de iteraciones\n",
-        "tol      = #tolerancia\n",
+        "f  = lambda x:  #<---- defina la funcion\n",
+        "df = lambda x:  #<---- defina su derivada\n",
+        "x0       =  #valor inicial\n",
+        "niter    =  #numero maximo de iteraciones\n",
+        "tol      =  #tolerancia\n",
         "\n",
         "raiz,k=nr(f,df,x0,niter,tol) #se llama el metodo y devuelve la raiz y las iteraciones\n",
         "print(raiz,) #<---- mostrar la raiz encontrada y el numero de iteraciones"
@@ -109,9 +109,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "esFbjm9ChMaD",
-        "outputId": "929fc9a6-c326-4c3a-b3f7-9c99344903e2"
+        "outputId": "4acbb71a-4d44-4017-9c34-9b56a4ab788c"
       },
-      "execution_count": 14,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +134,7 @@
     {
       "cell_type": "code",
       "source": [
-        "x0       = #<---- cambie el valor inicial\n",
+        "x0 = #<---- cambie el valor inicial\n",
         "\n",
         "raiz,k=nr(f,df,x0,niter,tol)\n",
         "print(raiz,k)"
@@ -144,9 +144,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EKdsJaxCh2li",
-        "outputId": "e1690b7a-5982-4b3a-d05f-edcfe4e07b13"
+        "outputId": "ed6152cb-406d-4025-e756-18b544d3610f"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +169,7 @@
     {
       "cell_type": "code",
       "source": [
-        "x0       = #<----- cambie el valor inicial\n",
+        "x0 = #<----- cambie el valor inicial\n",
         "\n",
         "raiz,k=nr(f,df,x0,niter,tol)\n",
         "print(raiz,k)"
@@ -179,9 +179,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x3Ua91Z5j8NX",
-        "outputId": "64fb2e3e-1dc7-4495-d2de-f5aac8d0d5b0"
+        "outputId": "e024a1e3-25f4-4f1b-e578-933d15899a1a"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +204,7 @@
     {
       "cell_type": "code",
       "source": [
-        "x0       = #<---- cambie el valor inicial\n",
+        "x0 = #<---- cambie el valor inicial\n",
         "\n",
         "raiz,k=nr(f,df,x0,niter,tol)\n",
         "print(raiz,k)"
@@ -214,9 +214,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cP4eMi2qkAuS",
-        "outputId": "a218a113-f2f9-4203-e8ef-e941a4960162"
+        "outputId": "8eb904de-93a8-4d6b-a9e2-de55b66904a8"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,7 +230,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Observamos que igualmente llega al resultado pero ahora le toma $14$ iteraciones, notamos que si el valor inicial se acerca a 0 entonces le toma más iteraciones llegar a la raíz, note que no es posible que $x_0=0$ porque la derivada es cero y el valor de x se indetermina y no es posible obtener la raíz."
+        "Observamos que igualmente llega al resultado pero ahora le toma $14$ iteraciones, notamos que si el valor inicial se acerca a 0 entonces le toma más iteraciones llegar a la raíz, note que no es posible que $x_0=0$ porque la derivada es cero y el valor de x se indetermina y no es posible obtener la raíz, suponga un valor inicial de 1e-18."
       ],
       "metadata": {
         "id": "1FYppOh6kQUF"
@@ -239,7 +239,7 @@
     {
       "cell_type": "code",
       "source": [
-        "x0       = #<---- cambie el valor inicial\n",
+        "x0 = #<---- cambie el valor inicial\n",
         "\n",
         "raiz,k=nr(f,df,x0,niter,tol)\n",
         "print(raiz,k)"
@@ -249,15 +249,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gq6kPDrZkUZF",
-        "outputId": "280979a3-d0d2-401e-88d0-450340712212"
+        "outputId": "01c4a17e-716a-4baa-fd60-8a7bf2fb454f"
       },
-      "execution_count": 13,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1.4142135623974939 54\n"
+            "1.4142135623863332 64\n"
           ]
         }
       ]
@@ -290,9 +290,10 @@
         "\n",
         "plt.plot(xs,ks,xs,xr)\n",
         "plt.title('Newton-Raphson para f(x)=x^2-2')\n",
+        "plt.legend(['Iteraciones','raiz'])\n",
         "plt.xlabel('x inicial')\n",
         "plt.ylabel('iteraciones')\n",
-        "plt.grid()\n"
+        "plt.grid()"
       ],
       "metadata": {
         "id": "DZXFSVZtlJ6q"
@@ -322,15 +323,15 @@
     {
       "cell_type": "code",
       "source": [
-        "f  = lambda #<----- defina la funcion\n",
-        "df = lambda #<----- defina su derivada\n",
-        "niter = 50\n",
+        "f  = lambda x: x**3-1.0 #<----- defina la funcion\n",
+        "df = lambda x:3*x #<----- defina su derivada\n",
+        "niter = 20\n",
         "tol = 1e-5\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "n=100\n",
-        "rangox=[-2, 2]\n",
+        "n=50\n",
+        "rangox=[0.1, 2]\n",
         "xs=np.linspace(rangox[0],rangox[1],n)\n",
         "ks=np.zeros(n)\n",
         "xr=np.zeros(n)\n",
@@ -457,37 +458,6 @@
       "metadata": {
         "id": "4if6MVJib7Av"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "import cmath\n",
-        "\n",
-        "n=1000\n",
-        "lienzo = np.zeros((n,n))\n",
-        "rangox=[-2, 2]\n",
-        "rangoy=[-2, 2]\n",
-        "xs=np.linspace(rangox[0],rangox[1],n) #valores reales\n",
-        "ys=np.linspace(rangoy[0],rangoy[1],n) #valores imaginarios\n",
-        "[x, y] = np.meshgrid(xs, ys) #combinaciones de cada valor\n",
-        "\n",
-        "from PIL import Image\n",
-        "image = Image.new(mode='L', size=(n, n))\n",
-        "\n",
-        "for i in range(n):\n",
-        "  for j in range(n):\n",
-        "    x0=complex(x[i,j],y[i,j]) #se crea el valor complejo\n",
-        "    [xr,ks]=nr(f,df,x0)\n",
-        "    image.putpixel((i, j), *15) #<---- dibujar el lienzo\n",
-        "\n",
-        "image.show()"
-      ],
-      "metadata": {
-        "id": "ZzUwzLnxZQ1m"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
