--- a/Proporcion_aurea.ipynb
+++ b/Proporcion_aurea.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5J6vkxlyeHGh/68AahBy2",
+      "authorship_tag": "ABX9TyNAOhme0u0//ZWfw+mSFQVq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,17 +31,15 @@
       "source": [
         "Proporción aurea\n",
         "---\n",
-        "La proporción áurea, es un concepto matemático y estético que ha fascinado a los artistas, arquitectos y matemáticos a lo largo de la historia. Se denota generalmente por la letra griega φ (phi).\n",
-        "\n",
-        "La razón dorada se define en términos de una proporción entre dos segmentos, de manera que el cociente de la longitud total a la longitud del segmento más largo es igual al cociente de la longitud del segmento más largo a la longitud del segmento más corto. Matemáticamente, se puede expresar de la siguiente manera:\n",
-        "$$\n",
-        "(a + b) / a = a / b = φ\n",
-        "$$\n",
-        "Donde $a$ representa la longitud del segmento más largo, $b$ representa la longitud del segmento más corto y $φ$ es la razón dorada.\n",
+        "La proporción áurea, también conocida como la razón dorada o número áureo, es un concepto verdaderamente fascinante que ha influido en la creatividad humana y la estética a lo largo de la historia. Imagina que tienes una varilla y deseas dividirla en dos segmentos de tal manera que la relación entre la longitud total de la varilla y la longitud del segmento más largo sea la misma que la relación entre la longitud del segmento más largo y la longitud del segmento más corto. Esta relación mágica se representa con la letra griega φ (phi).\n",
         "\n",
         "|           a    | b |\n",
         "|----|---|\n",
         "|<------------------->|<------>|\n",
+        "\n",
+        "En otras palabras, la proporción áurea se manifiesta cuando la belleza y la armonía matemática convergen. Si llamamos \"a\" a la longitud del segmento más largo y \"b\" a la longitud del segmento más corto, entonces podemos expresarlo de la siguiente manera:\n",
+        "\n",
+        "(a + b) / a = a / b = φ\n",
         "\n",
         "La ecuación anterior la podemos escribir como\n",
         "$$\n",
@@ -63,7 +61,11 @@
         "\n",
         "$$\n",
         "φ = \\frac{\\sqrt{5}-1}{2} \\approx 0.6180339887498949\n",
-        "$$"
+        "$$\n",
+        "\n",
+        "Esta fórmula aparentemente simple tiene un profundo impacto en nuestras percepciones estéticas y ha sido utilizada por artistas y arquitectos a lo largo de la historia para crear obras que se sienten naturalmente equilibradas y visualmente atractivas.\n",
+        "\n",
+        "Lo interesante es que la proporción áurea aparece en la naturaleza, desde la disposición de las hojas en las plantas hasta la espiral de un caracol, lo que sugiere que existe una especie de \"matemática divina\" subyacente en el mundo que nos rodea. Además, la proporción áurea se encuentra en muchas obras de arte famosas, como la Mona Lisa de Leonardo da Vinci y la arquitectura de edificios icónicos como el Partenón en Atenas."
       ],
       "metadata": {
         "id": "mKhbqJXMW-mC"
@@ -71,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
