--- a/Mandelbrot.ipynb
+++ b/Mandelbrot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsVJxEAEUr/KNPJkwTX4WD",
+      "authorship_tag": "ABX9TyMp8IKiNB/ttH9tmtIVp3Z8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -151,7 +151,9 @@
         "El conjunto de Mandelbrot ha capturado la imaginación de muchas personas debido a su belleza visual y su complejidad matemática. Se ha utilizado en arte, diseño y gráficos por computadora, y también ha sido objeto de investigación matemática en el campo de los sistemas dinámicos y la teoría del caos.\n",
         "\n",
         "\n",
-        "[Conjunto de Mandelbrot](https://complex-analysis.com/contenido/conjunto_de_mandelbrot.html)"
+        "[Conjunto de Mandelbrot](https://complex-analysis.com/contenido/conjunto_de_mandelbrot.html)\n",
+        "\n",
+        "[Video conjunto de Mandelbrot](https://www.youtube.com/watch?v=1uT67l5STEw)"
       ],
       "metadata": {
         "id": "uM32lSa8I8wg"
@@ -204,7 +206,7 @@
       "metadata": {
         "id": "3dHNoxnq41Jo"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +269,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[Conjunto de Julia](https://complex-analysis.com/contenido/conjunto_de_julia.html)"
+        "[Conjunto de Julia](https://complex-analysis.com/contenido/conjunto_de_julia.html)\n",
+        "\n",
+        "[Video conjunto de Julia](https://www.youtube.com/watch?v=wjWa7iUuq1A)"
       ],
       "metadata": {
         "id": "NO8OG5Z5xxAx"
@@ -319,7 +323,25 @@
       "metadata": {
         "id": "vOu6vFXVt2Tf"
       },
-      "execution_count": 9,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[Estructuras oculatas en los fractales de Mandelbrot y Julia](https://www.youtube.com/watch?v=vfteiiTfE0c)"
+      ],
+      "metadata": {
+        "id": "wOnrwKf4ceW1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qwHLDMm4cllZ"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
