--- a/03optimizacion.ipynb
+++ b/03optimizacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKO2VM7ztjVxfJtj2hdaq8",
+      "authorship_tag": "ABX9TyMdYQA3Imz2WzZctgJvlrzu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "id": "SlSuIiOih-Lt"
       },
@@ -72,21 +72,21 @@
       "source": [
         "import numpy as np\n",
         "\n",
-        "def seccionaurea(function, a, b, epsilon=1e-5):\n",
-        "    golden_ratio = (np.sqrt(5) - 1) / 2\n",
-        "    x1 = a + (1 - golden_ratio) * (b - a)\n",
-        "    x2 = a + golden_ratio * (b - a)\n",
-        "    print(golden_ratio,1-golden_ratio)\n",
-        "    while abs(b - a) > epsilon:\n",
-        "        print(f'{a:10.4f}{x1:10.4f}{x2:10.4f}{b:10.4f}{function(x1):10.4f}{function(x2):10.4}')\n",
-        "        if function(x1) < function(x2):\n",
+        "def seccionaurea(f, a, b, tol=1e-5):\n",
+        "    phi = (np.sqrt(5) - 1) / 2\n",
+        "    x1 = a + (1 - phi) * (b - a)\n",
+        "    x2 = a + phi * (b - a)\n",
+        "    print(phi,1-phi)\n",
+        "    while abs(b - a) > tol:\n",
+        "        if f(x1) < f(x2):\n",
         "            a = #<--- asignar el valor de x1, paso 8\n",
         "            x1 = x2\n",
-        "            x2 = a + golden_ratio * (b - a)\n",
+        "            x2 = a + phi * (b - a)\n",
         "        else:\n",
         "            b = #<--- asignar el valor de x2, paso 9\n",
         "            x2 = x1\n",
-        "            x1 = a + (1 - golden_ratio) * (b - a)\n",
+        "            x1 = a + (1 - phi) * (b - a)\n",
+        "        print(f'{a:10.6f}{x1:10.6f}{x2:10.6f}{b:10.6f}{f(x1):10.6f}{f(x2):10.6}')\n",
         "\n",
         "    return #<--- retornar el punto medio, paso 11"
       ]
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "oM1I5zIxiQea"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -120,14 +120,54 @@
     {
       "cell_type": "code",
       "source": [
-        "max = seccionaurea() #<---- dar los parametros en el intervalo [0,4]\n",
+        "max = seccionaurea(f,0,4) #<---- dar los parametros en el intervalo [0,4]\n",
         "print(max)"
       ],
       "metadata": {
-        "id": "QKwKBQxtif56"
+        "id": "QKwKBQxtif56",
+        "outputId": "ca882f55-fdd9-4504-a838-f52d3468ba6c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.6180339887498949 0.3819660112501051\n",
+            "  0.000000  0.944272  1.527864  2.472136  1.530976   1.76472\n",
+            "  0.944272  1.527864  1.888544  2.472136  1.764720   1.54322\n",
+            "  0.944272  1.304952  1.527864  1.888544  1.759452   1.76472\n",
+            "  1.304952  1.527864  1.665631  1.888544  1.764720   1.71358\n",
+            "  1.304952  1.442719  1.527864  1.665631  1.775475   1.76472\n",
+            "  1.304952  1.390097  1.442719  1.527864  1.774200   1.77547\n",
+            "  1.390097  1.442719  1.475242  1.527864  1.775475   1.77324\n",
+            "  1.390097  1.422619  1.442719  1.475242  1.775699   1.77547\n",
+            "  1.390097  1.410197  1.422619  1.442719  1.775398    1.7757\n",
+            "  1.410197  1.422619  1.430297  1.442719  1.775699   1.77572\n",
+            "  1.422619  1.430297  1.435042  1.442719  1.775717   1.77566\n",
+            "  1.422619  1.427364  1.430297  1.435042  1.775726   1.77572\n",
+            "  1.422619  1.425552  1.427364  1.430297  1.775721   1.77573\n",
+            "  1.425552  1.427364  1.428484  1.430297  1.775726   1.77572\n",
+            "  1.425552  1.426672  1.427364  1.428484  1.775725   1.77573\n",
+            "  1.426672  1.427364  1.427792  1.428484  1.775726   1.77573\n",
+            "  1.426672  1.427100  1.427364  1.427792  1.775725   1.77573\n",
+            "  1.427100  1.427364  1.427527  1.427792  1.775726   1.77573\n",
+            "  1.427364  1.427527  1.427628  1.427792  1.775726   1.77573\n",
+            "  1.427364  1.427465  1.427527  1.427628  1.775726   1.77573\n",
+            "  1.427465  1.427527  1.427566  1.427628  1.775726   1.77573\n",
+            "  1.427527  1.427566  1.427590  1.427628  1.775726   1.77573\n",
+            "  1.427527  1.427551  1.427566  1.427590  1.775726   1.77573\n",
+            "  1.427527  1.427542  1.427551  1.427566  1.775726   1.77573\n",
+            "  1.427542  1.427551  1.427557  1.427566  1.775726   1.77573\n",
+            "  1.427542  1.427548  1.427551  1.427557  1.775726   1.77573\n",
+            "  1.427548  1.427551  1.427553  1.427557  1.775726   1.77573\n",
+            "1.4275524140085705\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
