--- a/03optimizacion.ipynb
+++ b/03optimizacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdYQA3Imz2WzZctgJvlrzu",
+      "authorship_tag": "ABX9TyOxXQYCvonycIFlSImTdp++",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,30 +64,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "source": [
+        "from tabulate import tabulate\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "hwkbvI--hEPO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "SlSuIiOih-Lt"
       },
       "outputs": [],
       "source": [
         "import numpy as np\n",
+        "from tabulate import tabulate\n",
         "\n",
         "def seccionaurea(f, a, b, tol=1e-5):\n",
         "    phi = (np.sqrt(5) - 1) / 2\n",
         "    x1 = a + (1 - phi) * (b - a)\n",
         "    x2 = a + phi * (b - a)\n",
         "    print(phi,1-phi)\n",
+        "    tabla=[]\n",
+        "    titulos=['a','x1','x2','b','f(x1)','f(x2)']\n",
         "    while abs(b - a) > tol:\n",
         "        if f(x1) < f(x2):\n",
-        "            a = #<--- asignar el valor de x1, paso 8\n",
+        "            a = x1 #<--- asignar el valor de x1, paso 8\n",
         "            x1 = x2\n",
         "            x2 = a + phi * (b - a)\n",
         "        else:\n",
-        "            b = #<--- asignar el valor de x2, paso 9\n",
+        "            b = x2 #<--- asignar el valor de x2, paso 9\n",
         "            x2 = x1\n",
         "            x1 = a + (1 - phi) * (b - a)\n",
-        "        print(f'{a:10.6f}{x1:10.6f}{x2:10.6f}{b:10.6f}{f(x1):10.6f}{f(x2):10.6}')\n",
-        "\n",
+        "        it=[a,x1,x2,b,f(x1),f(x2)]\n",
+        "        tabla.append(it)\n",
+        "    print(tabulate(tabla,titulos,showindex=True))\n",
         "    return #<--- retornar el punto medio, paso 11"
       ]
     },
@@ -99,7 +115,7 @@
       "metadata": {
         "id": "oM1I5zIxiQea"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -125,46 +141,48 @@
       ],
       "metadata": {
         "id": "QKwKBQxtif56",
-        "outputId": "ca882f55-fdd9-4504-a838-f52d3468ba6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ee45548f-7ce5-40b7-ae97-8a71af27bb1c"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "0.6180339887498949 0.3819660112501051\n",
-            "  0.000000  0.944272  1.527864  2.472136  1.530976   1.76472\n",
-            "  0.944272  1.527864  1.888544  2.472136  1.764720   1.54322\n",
-            "  0.944272  1.304952  1.527864  1.888544  1.759452   1.76472\n",
-            "  1.304952  1.527864  1.665631  1.888544  1.764720   1.71358\n",
-            "  1.304952  1.442719  1.527864  1.665631  1.775475   1.76472\n",
-            "  1.304952  1.390097  1.442719  1.527864  1.774200   1.77547\n",
-            "  1.390097  1.442719  1.475242  1.527864  1.775475   1.77324\n",
-            "  1.390097  1.422619  1.442719  1.475242  1.775699   1.77547\n",
-            "  1.390097  1.410197  1.422619  1.442719  1.775398    1.7757\n",
-            "  1.410197  1.422619  1.430297  1.442719  1.775699   1.77572\n",
-            "  1.422619  1.430297  1.435042  1.442719  1.775717   1.77566\n",
-            "  1.422619  1.427364  1.430297  1.435042  1.775726   1.77572\n",
-            "  1.422619  1.425552  1.427364  1.430297  1.775721   1.77573\n",
-            "  1.425552  1.427364  1.428484  1.430297  1.775726   1.77572\n",
-            "  1.425552  1.426672  1.427364  1.428484  1.775725   1.77573\n",
-            "  1.426672  1.427364  1.427792  1.428484  1.775726   1.77573\n",
-            "  1.426672  1.427100  1.427364  1.427792  1.775725   1.77573\n",
-            "  1.427100  1.427364  1.427527  1.427792  1.775726   1.77573\n",
-            "  1.427364  1.427527  1.427628  1.427792  1.775726   1.77573\n",
-            "  1.427364  1.427465  1.427527  1.427628  1.775726   1.77573\n",
-            "  1.427465  1.427527  1.427566  1.427628  1.775726   1.77573\n",
-            "  1.427527  1.427566  1.427590  1.427628  1.775726   1.77573\n",
-            "  1.427527  1.427551  1.427566  1.427590  1.775726   1.77573\n",
-            "  1.427527  1.427542  1.427551  1.427566  1.775726   1.77573\n",
-            "  1.427542  1.427551  1.427557  1.427566  1.775726   1.77573\n",
-            "  1.427542  1.427548  1.427551  1.427557  1.775726   1.77573\n",
-            "  1.427548  1.427551  1.427553  1.427557  1.775726   1.77573\n",
-            "1.4275524140085705\n"
+            "           a        x1       x2        b    f(x1)    f(x2)\n",
+            "--  --------  --------  -------  -------  -------  -------\n",
+            " 0  0         0.944272  1.52786  2.47214  1.53098  1.76472\n",
+            " 1  0.944272  1.52786   1.88854  2.47214  1.76472  1.54322\n",
+            " 2  0.944272  1.30495   1.52786  1.88854  1.75945  1.76472\n",
+            " 3  1.30495   1.52786   1.66563  1.88854  1.76472  1.71358\n",
+            " 4  1.30495   1.44272   1.52786  1.66563  1.77547  1.76472\n",
+            " 5  1.30495   1.3901    1.44272  1.52786  1.7742   1.77547\n",
+            " 6  1.3901    1.44272   1.47524  1.52786  1.77547  1.77324\n",
+            " 7  1.3901    1.42262   1.44272  1.47524  1.7757   1.77547\n",
+            " 8  1.3901    1.4102    1.42262  1.44272  1.7754   1.7757\n",
+            " 9  1.4102    1.42262   1.4303   1.44272  1.7757   1.77572\n",
+            "10  1.42262   1.4303    1.43504  1.44272  1.77572  1.77566\n",
+            "11  1.42262   1.42736   1.4303   1.43504  1.77573  1.77572\n",
+            "12  1.42262   1.42555   1.42736  1.4303   1.77572  1.77573\n",
+            "13  1.42555   1.42736   1.42848  1.4303   1.77573  1.77572\n",
+            "14  1.42555   1.42667   1.42736  1.42848  1.77572  1.77573\n",
+            "15  1.42667   1.42736   1.42779  1.42848  1.77573  1.77573\n",
+            "16  1.42667   1.4271    1.42736  1.42779  1.77573  1.77573\n",
+            "17  1.4271    1.42736   1.42753  1.42779  1.77573  1.77573\n",
+            "18  1.42736   1.42753   1.42763  1.42779  1.77573  1.77573\n",
+            "19  1.42736   1.42747   1.42753  1.42763  1.77573  1.77573\n",
+            "20  1.42747   1.42753   1.42757  1.42763  1.77573  1.77573\n",
+            "21  1.42753   1.42757   1.42759  1.42763  1.77573  1.77573\n",
+            "22  1.42753   1.42755   1.42757  1.42759  1.77573  1.77573\n",
+            "23  1.42753   1.42754   1.42755  1.42757  1.77573  1.77573\n",
+            "24  1.42754   1.42755   1.42756  1.42757  1.77573  1.77573\n",
+            "25  1.42754   1.42755   1.42755  1.42756  1.77573  1.77573\n",
+            "26  1.42755   1.42755   1.42755  1.42756  1.77573  1.77573\n",
+            "None\n"
           ]
         }
       ]
