--- a/03optimizacion.ipynb
+++ b/03optimizacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKBqiFDcEnxcnq70pzfboK",
+      "authorship_tag": "ABX9TyOaQJ+Qs7h6Rr4TB+iP2HnR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,11 +91,11 @@
         "    titulos=['a','x1','x2','b','f(x1)','f(x2)']\n",
         "    while abs(b - a) > tol:\n",
         "        if f(x1) < f(x2):\n",
-        "            a = x1 #<--- asignar el valor de x1, paso 8\n",
+        "            a = #<--- asignar el valor de x1, paso 8\n",
         "            x1 = x2\n",
         "            x2 = a + phi * (b - a)\n",
         "        else:\n",
-        "            b = x2 #<--- asignar el valor de x2, paso 9\n",
+        "            b = #<--- asignar el valor de x2, paso 9\n",
         "            x2 = x1\n",
         "            x1 = a + (1 - phi) * (b - a)\n",
         "        it=[a,x1,x2,b,f(x1),f(x2)]\n",
